--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,10 @@ header {
     animation: gradient-animation 5s ease infinite;
 }
 
+.text1{
+    margin-left: 50%;
+    color: rgb(0, 217, 255);
+}
 @keyframes gradient-animation {
     0% {
         background-position: 0% 50%;
@@ -97,7 +101,7 @@ li {
     margin-bottom: 10px;
     text-align: center;
     color: #fff;
-    background-color: #00b894;
+    background-color: #74efff;
     border: none;
     border-radius: 5px;
     font-size: 1em;
@@ -107,7 +111,7 @@ li {
     background-color: #55efc4;
 }
 
-#join-vip-group {
+.join-vip-group {
     margin-top: 20px;
     padding: 15px;
     font-size: 1.2em;
@@ -118,6 +122,39 @@ li {
     cursor: pointer;
     animation: color-cycle 2s infinite;
 }
+
+.button1 {
+    background-color: #00b894;
+    margin-left: 200px;
+    border: 0px;
+    color: white;
+    height: 30px;
+    width: 200px;
+    font-size: 15px;
+    font: bold;
+}
+
+.button2{
+    background-color: #00b894;
+    color: white;
+    border: 0px;
+    height: 30px;
+    width: 200px;
+    font-size: 15px;
+    font: bold;
+}
+
+.button3{
+    background-color: #00b894;
+    color: white;
+    margin-left: 199px;
+    border: 0px;
+    height: 30px;
+    width: 200px;
+    font-size: 15px;
+    font: bold;
+}
+
 
 @keyframes color-cycle {
     0% {
